# Wartsila

./: .gitignore
WartsilaTest/: CMakeLists.txt
WartsilaTest/Test_figures/: Round04.txt  RoundBad01.txt  RoundBad05.txt  RoundOuter01.txt  Square01.txt  SquareBorder02.txt  SquareInner02.txt  SquareInner05.txt  SquareOuter04.txt
WartsilaTest/Tests/: Round01.txt  Round01w03.txt  Round01w05.txt  Round03.txt  Round04w01.txt  Round04w03.txt  Round04w04.txt  Round06w03.txt  Round06w05.txt  Square01w03.txt  Square01w04.txt  Square02w02.txt  Square02w03.txt  Square03g01.txt  Square03g04.txt  Square04.txt  Square05.txt
WartsilaTest/WartsilaTest/: Finder.cpp  Finder.h  Round01w02.txt  Round01w04.txt  Round02.txt  Round04w02.txt  Round04w05.txt  Round05.txt  Round06.txt  Round06w04.txt  Square01w01.txt  Square01w05.txt  Square02.txt  Square02w01.txt  Square02w05.txt  Square03g03.txt  Square06.txt  main.cpp
